src/components/Hero/Hero.css
.hero-text-image-mask {
  font-weight: 700;
  font-size: 5rem;
  margin-bottom: 2rem;
  padding-top: 2rem;
}

.padleft,
.padright {
  margin-top: 10rem;
}

.buttons {
  display: flex;
  justify-content: left;
  padding-top: 1rem;
  align-items: center;
}

.btn btn-outline-secondary {
  background: rgb(247, 247, 247);
  background: linear-gradient(
    90deg,
    rgba(247, 247, 247, 0.7427564775910365) 0%,
    rgba(15, 15, 255, 1) 100%
  );
  border: none;
  color: white;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 24px;
  margin: 4px 2px;
  transition-duration: 0.4s;
  border-radius: 1rem;
}

.hero-text {
  width: 100%;
  font-family: "Geist";
  font-weight: 700;
  font-size: 4rem;
  line-height: 60 px;
  overflow: visible;
  color: #fff;
}

.hero-subtitle {
  font-size: 2rem;
  font-weight: 700;
  color: #565656;
}

.portrait {
  object-fit: cover;
  border-radius: 1rem;
  width: 100%;
  height: 100%;
}

.image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;

  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  backdrop-filter: blur(10px);
  background: rgba(255, 255, 255, 0.5);
  border-radius: 1rem;
  box-sizing: content-box;
  max-height: 500px;
}

.hero-image {
  object-fit: fill;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
  width: auto;
  border-radius: 2rem;
}

.right {
  display: flex;
  flex-direction: column;
  justify-self: left;
}
.hero-content {
  padding-left: 2rem;
  padding-right: 2rem;
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 0.5fr 1.75fr 0.25fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  height: 100dvh;
}

@media screen and (max-width: 768px) {
  .hero-content {
    display: grid;
    flex-direction: column;
    grid-template-columns: 1fr;
    grid-template-rows: 6fr;
    min-width: 100dvw;
    height: fit-content;
    padding: 2rem;
    margin-top: 6rem;
  }
  .padleft {
    display: none;
  }
  .padright {
    display: none;
  }
  .content {
    grid-template-columns: 1fr;
  }
  .btn {
    background: white;
    color: black;
  }
  .hero-text {
    color: chartreuse;
  }
}

.socialhero-icons {
  justify-items: left;
  display: flex;
  padding: 0%;
}

.socialhero-icons a {
  text-decoration: none;
  align-items: center;
  color: #6f6f6f;
  font-size: large;
}

.socialhero-icons :hover {
  border-radius: 0.5rem;
  background-color: #c8c8cc;
}

@media (max-width: 768) {
  .hero-image {
    display: flex;
    flex-direction: column; /* Add this line */
    grid-template-columns: 1fr;
    min-width: 100%;
    height: fit-content;
    padding: 2rem;
    margin: 1rem;
  }
  .image {
    height: 400px;
  }
  .hero-text-image-mask {
    font-size: 4rem;
  }
  .content {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
  }
  .hero-image {
    display: flex;
    grid-template-columns: 1fr;
    min-width: 100%;
    height: 50dvh;
    padding: 2rem;
    margin: 1rem;
  }
  .content {
    grid-template-columns: 1fr;
  }
  .hero-text-image-mask {
    font-size: 2rem;
  }
}

